fix(examples): correctly hide examples on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -347,21 +347,3 @@
   }
 }
 
-@layer utilities {
-  .desktop-only {
-    display: none;
-  }
-  .mobile-only {
-    display: block;
-  }
-
-  @screen lg {
-    .desktop-only {
-      display: block;
-    }
-    .mobile-only {
-      display: none;
-    }
-  }
-}
-
